# iniparser

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.include  README.md
example/: Makefile  inifile.c
src/: dictionary.h  iniparser.c  iniparser.h
test/: Makefile
